--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,10 @@
             <artifactId>asm</artifactId>
             <version>9.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-commons</artifactId>
+            <version>9.0</version>
+        </dependency>
     </dependencies>
 </project>
